--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,7 +1,15 @@
 %p#notice= notice
 
-%h1= @article.title
+%h2= @article.title
 %p= @article.body
 
 = link_to 'Edit', edit_article_path(@article)
 = link_to 'Back', articles_path
+
+
+%h3 Comments
+= @article.comments.size
+
+= render partial: 'articles/comment', collection: @article.comments.reverse
+
+= render partial: 'comments/form'
