--- a/app/views/articles/_comment.html.haml
+++ b/app/views/articles/_comment.html.haml
@@ -1,4 +1,6 @@
 %div
   %h4
     Comment by #{comment.author_name}
+    = distance_of_time_in_words(comment.article.created_at, comment.created_at) 
+    earlier
   %p.comment= comment.body
