--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,12 +1,20 @@
 -# frozen_string_literal: true
 %h3 Post a Comment
 
-= form_for [ @article, @comment ] do |f|
-  %p  
-    = f.label :author_name, "your name"
-    = f.text_field :author_name
-  %p
-    = f.label :body, "your comment"
-    = f.text_area :body
-  %p
-    = f.submit 'submit'
+= form_for [ @article, @comment ] do |f|  
+  .uk-input
+  = f.text_field :author_name
+  = f.label :author_name, "your name"
+  
+  .uk-textarea
+  = f.text_field :body
+  = f.label :body, "your comment"
+  
+  = f.submit 'submit'
+
+
+
+
+
+
+
