--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,23 +1,31 @@
-%h1 Listing articles
+- @articles.each do |article|
+  .container-fluid
+    .row
+      .col-md-12
+        .row
+          .col-md-8
+            .row
+              .col-md-6
+                = link_to 'Edit', edit_article_path(article)
+              .col-md-6
+                = link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }
+            %h3.text-muted.text-center
+              = link_to article.title, article_path(article)
+          .col-md-4
+            %ul
+              %li.list-item
+                comments:
+                - article.comments.size
 
-%table
-  %thead
-    %tr
-      %th Title
-      %th Body
-      %th
-      %th
-      %th
+        .row
+          .col-md-12
+            %p.lead.text-primary
+              = article.body
+            - article.comments.each do |comment|
+              .card.text-white.bg-info
+                %h5.card-header
+                  = comment.author_name
+                .card-body
+                  %p.card-text
+                    = comment.body
 
-  %tbody
-    - @articles.each do |article|
-      %tr
-        %td= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}"
-        %td= article.body
-        %td= link_to 'Show', article
-        %td= link_to 'Edit', edit_article_path(article)
-        %td= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'Create a New Article', new_article_path, class: 'new_article'
